Adding Migrate and composer update

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,10 @@
         "fxp-asset": {
             "installer-paths": "vendor/bower"
         }
-    }
+    },
+    "scripts": {
+		"post-update-cmd": [
+			"php migration"
+		]
+	}
 }
