--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,13 @@
     ],
     "require": {
         "php": ">=7.4.0",
-        "portalium/portalium-core": "^0.0.1",
-        "portalium/portalium-site": "^0.0.1",
-        "portalium/portalium-user": "^0.0.1",
-        "portalium/portalium-theme": "^0.0.1"
+        "portalium/portalium-core": "*",
+        "portalium/portalium-site": "*",
+        "portalium/portalium-user": "*",
+        "portalium/portalium-theme": "*",
+	    "portalium/portalium-menu": "*",
+        "portalium/portalium-content": "*",
+        "portalium/portalium-storage": "*"
     },
     "require-dev": {
         "yiisoft/yii2-gii": "^2.0",
