feat: backend and frontend merged to web

--- a/.htaccess
+++ b/.htaccess
@@ -1,34 +1,22 @@
 Options +FollowSymlinks
 RewriteEngine On
 
-# deal with admin first
-RewriteCond %{REQUEST_URI} ^/(admin)
-RewriteRule ^admin/assets/(.*)$ backend/web/assets/$1 [L]
-RewriteRule ^admin/data/(.*)$ data/$1 [L]
-RewriteRule ^admin/css/(.*)$ backend/web/css/$1 [L]
-
-RewriteCond %{REQUEST_URI} !^/backend/web/(assets|css)/
-RewriteCond %{REQUEST_URI} !^/data/
-RewriteCond %{REQUEST_URI} ^/(admin)
-RewriteRule ^.*$ backend/web/index.php [L]
-
-
 RewriteCond %{REQUEST_URI} ^/(assets|css)
-RewriteRule ^assets/(.*)$ frontend/web/assets/$1 [L]
-RewriteRule ^css/(.*)$ frontend/web/css/$1 [L]
+RewriteRule ^assets/(.*)$ web/www/assets/$1 [L]
+RewriteRule ^css/(.*)$ web/www/css/$1 [L]
 
-RewriteCond %{REQUEST_URI} !^/(frontend|backend)/web/(assets|css)/
+RewriteCond %{REQUEST_URI} !^/web/www/(assets|css)/
 RewriteCond %{REQUEST_URI} !^/data/
 RewriteCond %{REQUEST_URI} !^/favicon.ico
 RewriteCond %{REQUEST_URI} !index.php
 RewriteCond %{REQUEST_FILENAME} !-f [OR]
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^.*$ frontend/web/index.php
+RewriteRule ^.*$ web/www/index.php
 
 RewriteCond %{REQUEST_URI} ^/(api)
-RewriteRule ^api/assets/(.*)$ api/web/assets/$1 [L]
-RewriteRule ^api/css/(.*)$ api/web/css/$1 [L]
+RewriteRule ^api/assets/(.*)$ api/www/assets/$1 [L]
+RewriteRule ^api/css/(.*)$ api/www/css/$1 [L]
 
-RewriteCond %{REQUEST_URI} !^/api/web/(assets|css)/
+RewriteCond %{REQUEST_URI} !^/api/www/(assets|css)/
 RewriteCond %{REQUEST_URI} ^/(api)
-RewriteRule ^.*$ api/web/index.php [L]
+RewriteRule ^.*$ api/www/index.php [L]
