--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
 	    "portalium/yii2-menu": "*",
         "portalium/yii2-content": "*",
         "portalium/yii2-storage": "*",
-        "portalium/yii2-workspace": "*"
+        "portalium/yii2-workspace": "*",
+	    "yiisoft/yii2-bootstrap5": "dev-master#1a4f4d6"
     },
     "require-dev": {
         "yiisoft/yii2-gii": "^2.0",
